# mfkit

./: Dataset_1.csv  Dataset_2.csv  Dataset_3.csv  README.md  featurizer.py  pyproject.toml
src/mfkit/: __init__.py  featurizer.py
