[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mfkit"
version = "0.1.0"
description = "RDKit-based interpretable monomer featurizer for polymer informatics"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Gleb Averochkin" }
]
dependencies = [
    "numpy",
    "pandas",
    "rdkit"
]

[tool.setuptools.packages.find]
where = ["src"]